3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Potential fix for bug #1928570: x-ray vision now needs a push start.
 server/spell_effect.c: use FLAG_NO_FIX_PLAYER to not mess with our values.
Nicolas Weeger 2008-05-08

Fix a potential underflow, forbid players to create too powerful missiles.
 server/spell_effect.c
Nicolas Weeger 2008-05-08

Remove unpaid items when returning a player to his savebed for map reset or
after server-specific timeout.
 include/sproto.h
 server/login.c player.c
Nicolas Weeger 2008-05-08

Better and more logical fix for bug #1936178: Trying to remove removed object causes server crash.
 random_maps/treasure.c: remove doors after door replacing.
Nicolas Weeger 2008-05-08

Fix artifact reading to (kind of) trim strings. Fix add missing artifacts
to fix alchemy warning.
 common/treasure.c
 lib/artifacts
Nicolas Weeger 2008-05-08

Tentative fix for bug #1936178: Trying to remove removed object causes server crash.
 random_maps/treasure.c: update doorlist to process when removing a door.
Nicolas Weeger 2008-05-08

Tentative fix for bug #1956908: bolt wc can overflow.
 server/player.c: cap modifiers so we don't overflow wc.
Nicolas Weeger 2008-05-07

Fix bug #1929084: Wrong artifact stats on forged items. Use 'legal_artifact_combination'
to check that the item matches the artifact.
 common/recipe.c treasure.c
 include/libproto.h
Nicolas Weeger 2008-05-07

Remove autohook inserted in items, and use was_destroyed() to check item's validity.
 plugins/cfpython/include/cfpython_object.h: keep item's count, change check macros.
 plugins/cfpython/cfpython_map.c: fix wrong EXISTCHECK_INT to MAPEXISTCHECK_INT.