@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Implement feature request #1961031: 'drop food' and 'drop flesh' buttons would be nice.
+ lib/help/dropall: update help text.
+ server/c_object.c: extend 'dropall' to accept 'food' and 'flesh'.
+Nicolas Weeger 2008-05-10
+
 Potential fix for bug #1928570: x-ray vision now needs a push start.
  server/spell_effect.c: use FLAG_NO_FIX_PLAYER to not mess with our values.
 Nicolas Weeger 2008-05-08
